# awesome_wotlk

./: CMakeLists.txt
.github/workflows/: windows-release.yml
AwesomeCvar/: AwesomeCvar.lua  AwesomeCvar.xml
Interaction/: core.lua
addons/AwesomeCVar/: AwesomeCVar.toc  Constants.lua  Core.lua  UI.lua
addons/AwesomeCVar/Locales/: deDE.lua  enUS.lua  esMX.lua  frFR.lua  koKR.lua  ptBR.lua  ruRU.lua  zhCN.lua  zhTW.lua
addons/AwesomeCVar2/Locales/: deDE.lua
addons/AwesomeCvar/: AwesomeCvar.toc  AwesomeCvar.xml  Constants.lua  Core.lua  UI.lua
addons/AwesomeCvar/Locales/: deDE.lua  enUS.lua  esMX.lua  frFR.lua  koKR.lua  ptBR.lua  ruRU.lua  zhCN.lua  zhTW.lua
addons/Interaction/: Bindings.xml  Interaction.toc  core.lua
docs/: api_reference.md  readme.md
src/AwesomeWotlkLib/: CMakeLists.txt  Entry.cpp  Fonts.cpp  Fonts.h  GameClient.h  Hooks.cpp  Hooks.h  Item.cpp  Misc.cpp  NamePlates.cpp  NamePlates.h  Spell.cpp  Spell.h  UnitAPI.cpp
src/AwesomeWotlkPatch/: CMakeLists.txt  Main.cpp
